# EFDCPlus_Stable

./: .gitattributes  .gitignore  .readthedocs.yml  CMakeLists.txt  EFDCPlus_MPI_10.4.sln  EFDCPlus_MPI_11.sln  EFDCPlus_MPI_12.sln  Makefile  ReadMe.md  toolkit-setup.sh
EFDC/: .gitignore  EFDCPlus_MPI_10.4.0.vfproj  EFDCPlus_MPI_11.2.vfproj  EFDCPlus_MPI_11.3.vfproj  EFDCPlus_MPI_11.4.vfproj  EFDCPlus_MPI_11.5.vfproj  EFDCPlus_MPI_11.6.vfproj  EFDCPlus_MPI_11.7.vfproj  EFDCPlus_MPI_11.8.vfproj  EFDCPlus_MPI_12.3.vfproj  EFDCPlus_MPI_12.4.vfproj  MOD_efdcout.f90  aaefdc.f90  ainit.f90  bal2t.f90  bankerosed.f90  bedinit.f90  bedload.f90  calavb.f90  calbal.f90  calbed.f90  calbed9.f90  calblay.f90  calbuoy.f90  calconc.f90  caldiff.f90  caldisp2.f90  caldisp3.f90  caldye.f90  calebi.f90  calexp.f90  calexp2t.f90  calfqc.f90  calhdmf.f90  calhdmf3.f90  calhta.f90  calmmt.f90  calpnhs.f90  calpser.f90  calpuv2c.f90  (+117 more)
EFDC/ChemFate/: caltox.f90  caltox_kinetics.f90  caltoxb.f90  partmix.f90  setfpocb.f90
EFDC/Drifter/: Variables_MPI_Drifter.f90  mod_Variables_MPI_Drifter.f90  mod_drifter.f90
EFDC/Eutrophication/: mod_biota.f90  mod_diagen.f90  mod_macrohydro.f90  mod_rpem.f90  mod_shellfish.f90  mod_wq.f90  mod_wq_vars.f90  mod_zoopl.f90  wwqnc.f90
EFDC/GOTM_Turbulence/: algebraiclength.F90  alpha_mnb.F90  cmue_a.F90  cmue_b.F90  cmue_c.F90  cmue_d.F90  cmue_ma.F90  cmue_rf.F90  cmue_sg.F90  compute_cpsi3.F90  compute_rist.F90  dissipationeq.F90  epsbalgebraic.F90  fk_craig.F90  genericeq.F90  gotm_lib_version.F90  internal_wave.F90  ispralength.F90  kbalgebraic.F90  kbeq.F90  lengthscaleeq.F90  mod_gotm.f90  mod_gsw.f90  mod_turbulence.F90  potentialml.F90  production.F90  q2over2eq.F90  r_ratio.F90  tkealgebraic.F90  tkeeq.F90  variances.F90
EFDC/GOTM_Util/: adv_center.F90  convert_fluxes.F90  diff_center.F90  diff_face.F90  gridinterpol.F90  lagrange.F90  mod_compilation.F90  mod_eqstate.F90  mod_gotm_version.F90  mod_time.F90  mod_tridiagonal.F90  mod_util.F90  ode_solvers.F90  ode_solvers_template.F90
EFDC/GOTM_Yaml/: mod_yaml.f90  mod_yaml_settings.f90  mod_yaml_types.f90
EFDC/JSON_Reader/: fson.f90  fson_path_m.f90  fson_string_m.f90  fson_value_m.f90  mod_fson.f90  mod_fson_path.f90  mod_fson_string.f90  mod_fson_value.f90
EFDC/Linkages/: ceqicm.f90  foodchain.f90  mod_efdcout.f90  mod_hifreqout.f90  wasp4.f90  wasp5.f90  wasp6.f90  wasp7.f90  wasp7hydro.f90  wasp8hydro.f90
EFDC/MPI_Communication/: Communicate_3D_0.f90  Communicate_Drifters.f90  Communicate_Ghost_Routines.f90  Communicate_Groups.f90  Communicate_W.f90  Mod_Broadcast_Routines.f90  Mod_Gather_Drifter.f90  Mod_Gather_Soln.f90  Mod_SEND_RECV.f90  mod_Communicate_Drifters.f90  mod_Communicate_Ghost_Routines.f90  mod_allreduce.f90
EFDC/MPI_Domain_Decomp/: Allocate_Domain_Decomp.f90  Child_Grid.f90  Congrad_MPI.f90  Parent_Grid.f90  Read_JSON_Decomp.f90  Scan_Cell.f90  Scan_JSON_Decomp.f90
EFDC/MPI_Mapping/: Calculate_Local_Shear.f90  Create_List_No_Ghost_Cells.f90  Global_Mapping_Routines.f90  Map_Connectors.f90  Map_Discharge_BCs.f90  Map_Jet_Plume.f90  Map_OpenBC_Conc.f90  Map_OpenBC_Pressure.f90  Map_River.f90  Mod_Assign_Loc_Glob_For_Write.f90  Mod_Map_Gather_Sort.f90  Mod_Map_Global_to_Local.f90  Mod_Map_Soln.f90  Mod_Sort_Global_Soln.f90  ReMap_RSSBC.f90  Setup_Local_to_Global.f90  Setup_MapBackToGlobal.f90
EFDC/MPI_Out/: FormatOutputMPI.f90  Mod_Map_Write_EE_Binary.f90  Mod_Map_Write_NetCDF.f90  Mod_Write_Cell_Map_.f90  WriteCellMapLogging.f90  Write_Array_Sizes.f90  Write_Mapping_3Dgraphics.f90
EFDC/MPI_Utilities/: Initialize_MPI.f90  Mod_MPI_Helper_Functions.f90  Report_Max_Min_Timing.f90  Setup_MPI_Debug_File.f90  Setup_MPI_Topology.f90  Task_Division.f90  Variables_MPI.f90  Variables_MPI_Concentration.f90  Variables_MPI_Mapping.f90  Variables_MPI_Write_Out.f90  mod_Variables_MPI.f90  mod_Variables_MPI_MapGatherSort.f90  mod_Variables_MPI_Mapping.f90  mod_Variables_MPI_Write_Out.f90
EFDC/Post_Processing/: calmmt.f90  rsalplth.f90  svbksb.f90  svdcmp.f90
EFDC/Propwash/: Calc_Prop_Erosion.f90  Det_Adjacent_Cells.f90  Mod_Active_Ship.f90  Mod_All_Ship_Tracks.f90  Mod_All_Tracks.f90  Mod_Erosive_Flux.f90  Mod_Mesh.f90  Mod_Position.f90  Mod_Position_Cell.f90  Mod_Position_Elev.f90  Mod_Read_Propwash.f90  Mod_Ship.f90  Propwash_Calc_Sequence.f90  Setup_Ships.f90  Variables_Propwash.f90  Variables_Ship.f90  mod_Setup_Ships.f90  mod_Variables_Propwash.f90  mod_Variables_Ship.f90
EFDC/SedTran-Original/: bankerosed.f90  bedinit.f90  bedload.f90  calbed.f90  calblay.f90  calsed.f90  calsnd.f90  csedresb.f90  csedress.f90  csedset.f90  csedtaub.f90  csedtaus.f90  csndeqc.f90  csndset.f90  csndzeq.f90  fprobdep.f90  fsbdld.f90  fsedmode.f90  setshld.f90  setstvel.f90  ssedtox.f90
EFDC/SedTran-SEDZLJ/: s_bedload.f90  s_main.f90  s_sedic.f90  s_sedzlj.f90  s_shear.f90  s_slope.f90  s_tecplot.f90  varzerosnl.f90
EFDC/Transport/: calconc.f90  caldiff.f90  caldye.f90  calfqc.f90  calqvs.f90  calsft.f90  caltran.f90  caltran_ad.f90  caltranice.f90  calvolterm.f90  coare36.f90  mod_calcser.f90  mod_diffuser.f90  mod_heat.f90
EFDC/Utilities/: convertwgs84.f90  dstime.f90  linspace.f90  mod_allocate.f90  mod_convertwgs84.f90  mod_info.f90  mod_julian.f90  mod_xyijconv.f90  seek.f90  xyijconv.f90
EFDC/Waves/: mod_getswan.f90  mod_wavelength.f90  mod_windwave.f90  wavebl.f90  wavesxy.f90
include/NetCDF/: netcdf.mod  typesizes.mod
include/compiler/: ifcore.mod  ifport.mod  ifport_types.mod  omp_lib.mod  omp_lib_kinds.mod
include/mpi/: mpi.mod  mpi_base.mod  mpi_constants.mod  mpi_f08.mod  mpi_f08_callbacks.mod  mpi_f08_compile_constants.mod  mpi_f08_link_constants.mod  mpi_f08_types.mod  mpi_sizeofs.mod  pmpi_base.mod  pmpi_f08.mod
lib/NetCDF/: hdf.lib  hdf5.lib  hdf5_hl.lib  hdf5_tools.lib  jpeg.lib  libcurl_imp.lib  libhdf.lib  libhdf5_cpp.lib  libhdf5_hl.lib  libhdf5_tools.lib  libmfhdf.lib  libnetcdf.settings  libxdr.lib  mfhdf.lib  netcdf.lib  netcdf4.lib  xdr.lib  zlib.lib  zlibstatic.lib
lib/WASP/: hydrolink.lib
lib/compiler/: ifconsol.lib  (+16 more)
redist/: mpiifort.bat  mpiifx.bat
(+35 files in other folders)
